# TinyClassifier-

./: .gitignore  README.md  convert_to_ncnn.ps1  evaluate_local_accuracy.py  evaluate_random_subset_accuracy.py  prepare_board_testset.py  requirements.txt  run_all.ps1  train_tiny_classifier.py
Board_Card_Reasoning/: 07_lq_ncnn_demo.cpp
artifacts/: best_model.pt  labels.txt  metrics.json  random_sample_metrics.json  tiny_classifier_fp32.onnx
board_pack/deploy_cls/: tiny_classifier_96.opt.param
loongson_infer/: CMakeLists.txt  LQ_NCNN.cpp  LQ_NCNN.hpp  README.md  main.cpp
